# Protify

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md  __init__.py  delete_esm2_8m_embeddings.py  exp.ipynb  mkdocs.yml  probe_package_colab.ipynb  protify_modal_app.py  pyproject.toml  requirements.txt  setup_protify.sh  test_lazy_predict.py  transfer_learning_exp.sh
docs/: README.md  cli_and_config.md  cloud.md  data.md  getting_started.md  gui.md  hyperparameter_optimization.md  index.md  logging_and_replay.md  modal.md  model_components.md  models_and_embeddings.md  probes_and_training.md  proteingym.md  resource_listing.md  testing.md  visualization.md
modal/: delete_embeddings.py  protify_modal_app.py
src/: __init__.py
src/protify/: __init__.py  cloud_backend.py  cloud_cli.py  embedder.py  entrypoint_setup.py  gui.py  hyperopt_utils.py  logger.py  main.py  metrics.py  modal_backend.py  modal_cli.py  modal_utils.py  pooler.py  resource_info.py  seed_utils.py  utils.py
src/protify/base_models/: __init__.py  amplify.py  amplify_utils.py  ankh.py  base_tokenizer.py  calm.py  calm_utils.py  custom_model.py  dplm.py  dplm2.py  e1.py  e1_tokenizer.json  e1_utils.py  esm2.py  esmc.py  esmc_utils.py  get_base_models.py  glm.py  one_hot.py  protCLM.py  protbert.py  prott5.py  random.py  supported_models.py  t5.py  vec2vec.py
src/protify/benchmarks/: __init__.py
src/protify/data/: __init__.py  data_collators.py  data_mixin.py  dataset_classes.py  dataset_descriptions.py  dataset_utils.py  supported_datasets.py  utils.py
(+81 files in other folders)
