[tool.poetry]
name = "Protify"
version = "0.0.6"
description = "Low code molecular property prediction"
authors = ["Synthyra <info@synthyra.com>"]
keywords = ["plm, protein, transformer"]
repository = "https://github.com/Synthyra/Protify"
license = "Protify License"
readme = "README.md"
include = [
    "LICENSE.md",
    "README.md",
]

packages = [
    { include = "protify", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
torch = ">=2.5.1"
torchvision = "*"
transformers = ">=4.47"
accelerate = ">=1.1.0"
peft = "*"
tf-keras = "*"
tensorflow = "*"
torchinfo = "*"
torchmetrics = "*"
scikit-learn = "==1.5.0"
scipy = ">=1.13.1"
datasets = "*"
einops = "*"
numpy = "==1.26.4"
networkx = ">=3.4.2"
xgboost = "*"
lightgbm = "*"
pyfiglet = "*"
seaborn = ">=0.13.2"
matplotlib = ">=3.9.0"
sentencepiece = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"